--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -34,7 +34,7 @@ http {
     #gzip  on;
 
     upstream backendserver {
-        server 127.0.0.1:4000;
+        server 127.0.0.1:4000 ;
     }
 
     server {
@@ -47,19 +47,20 @@ http {
         # error_log logs/host.error.log main;
 
         location / {
-            # add_header "Access-Control-Allow-Origin" "*" [always];
+            add_header "Access-Control-Allow-Origin" "*";
+            
             # add_header "From-Nginx" "11-12-2022" [always];,
             # add_header "Access-Control-Allow-Headers" ["Set_Cookie", "Authorization", "refresh_token"] [always];
             # root   html;
             # index  index.html index.htm;
-            proxy_pass backendserver/ ;
+            proxy_pass http://localhost:3000/ ;
         }
 
             location /api {
                 # add_header "Access-Control-Allow-Origin" "*" [always];
                 # root   html;
                 # index  index.html index.htm;
-                proxy_pass http://localhost:4000/ ;
+                proxy_pass upstream/ ;
         }
 
         #error_page  404              /404.html;
